# MAI

./: README.md
BD/lab/: LAB1_zip  report.docx
CG/1/: Curve.py  main.py
CG/LAB2/: main.cpp  multyplyes.h  test
CG/LAB3/: Camera.h  Shader.h  main.cpp  multyplyes.h  test  как компилить.txt
CG/LAB4_5/: main.cpp  test
CG/LAB6/: main.cpp  multyplyes.h  start
CG/LAB7/: main.cpp  not_my.cpp  test  как компилить.txt
Crypto/Lab1/: lab1.py  lab1_ok.py
DA/Aho Corasic/: main.cpp
DA/Bag/: main.cpp
DA/Bool feet/: main.cpp
DA/Calc/: 00.t  TLongNum.cpp  TLongNum.h  main.cpp
DA/Counting Sort/: D_A_Lab1.cpp  myvector.cpp  myvector.h
DA/Ford Falckerson/: main.cpp  test.py
DA/Red Black Tree/: RB_REAL_MY.cpp
DA/Suffix Tree/: TREE.cpp  TSTree.cpp  TSTree.h  Ukkonen.cpp  main.cpp
LP/: LAB2.pl  LAB3.pl  LAB4.pl  NICE_LAB4.pl  TESTLAB3.pl  TRUE_LAB3.pl  capstone.pl  hello_world.pl  task1.pl  task2.pl  test.pl  testBagSetFind.pl
ML/: some.txt
ML/LAB1/: HW_BIN.ipynb  HW_BIN2.ipynb  where  where2
ML/LAB2/: HW_BIN_2.ipynb
NM/LAB1/: matrix.py  p1_1.py  p1_2.py  p1_3.py  p1_4.py  p1_5.py
OS/LAB3_VAR21/: LAB3_VAR21.sln
SA/: work.wxmx  work_2.wxmx
SP/: report-lab6-7.odt
SP/SP_8/code/lab08/: CMakeLists.txt  Lab08.rtf  base-compiler.h  baselexer.cpp  code-gen.cpp  gpred19.txt  lexer.h  pred.ss  pred1.cpp  pred1.ss  pred2.cpp  pred2.ss
SP/SP_9/lab09/: CMakeLists.txt  Lab09.rtf  SyntaxClasses19.rtf  base-compiler.cpp  baselexer.h  code-gen.cpp  m19.txt  mlispgen.cpp  t1.cpp  t2.cpp  t2.ss  t3.cpp  t3.ss  t4.cpp  t4.ss  t5.cpp  t5.ss  t6.cpp  t6.ss
(+349 files in other folders)
